View selection incorrectly resets to first position after MIP view replacement #764